# InvoxAI

./: BUILD_GUIDE.md  GEMINI.md  README.md  gemini-model-catalog.json  invox-ai.code-workspace  package.json  pnpm-lock.yaml  prettier.config.mjs  proxy.ts  supabase.sql
.github/workflows/: release.yml
app/: layout.tsx  page.tsx
app/account/: page.tsx
app/dashboard/: page.tsx
app/new-task/: page.tsx
app/task/: page.tsx
components/: account-settings.tsx  file-upload-panel.tsx  file-upload.tsx  sign-up-form.tsx  site-header.tsx  theme-provider.tsx  theme-switcher.tsx
components/account/: account-settings.tsx
components/auth/: auth-button.tsx  login-form.tsx  sign-up-form.tsx  update-password-form.tsx
components/files/: columns.tsx  data-table-column-header.tsx  data-table.tsx  file-actions.tsx  file-list.tsx  file-table.tsx  file-upload-modal.tsx  file-upload-panel.tsx  file-upload-types.ts  file-upload.tsx  use-file-upload.ts  xml-selection-dialog.tsx
components/layout/: site-header.tsx
components/providers/: gemini-model-catalog-bootstrap.tsx  query-provider.tsx
components/task-details/: task-files-table.tsx
components/tasks/: columns.tsx  data-table-column-header.tsx  data-table-view-options.tsx  data-table.tsx  file-actions.tsx  file-status-filter.tsx  task-status-filter.tsx  task-table.tsx
components/theme/: theme-switcher.tsx
components/ui/: pagination.tsx  sidebar.tsx
lib/: constants.ts  database.ts  file-import.ts  file-processing.ts  files.ts  filesystem.ts  logger.ts  models.ts  preferences.ts  sheets.ts  storage.ts  task-processing.ts  tasks.ts  xml-generator.ts
lib/files/: commands.ts  file-import.ts  file-processing.ts  index.ts  queries.ts  repository.ts  types.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  filesystem.rs  main.rs  sql.rs
src-tauri/src/commands/: file_operations.rs  logging_operations.rs  mod.rs  storage_operations.rs  xml_operations.rs
src-tauri/src/services/: file_hasher.rs  file_metadata.rs  file_storage.rs  mod.rs
(+28 files in other folders)
